--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body class="dashboard">
         <div class="logo-wrap">
-            <h1>LogoType</h1>
+            <h1><a href="#" title="View the home page">LogoType</a></h1>
         </div>
         <div class="header-right">
             <form method="get" action="#" class="search">
-            <label for="search">Search</label>
+            <label for="search" class="hide">Search</label>
             <input id="search" type="search" name="search">
-            <button>Search</button>
+            <button title="Search"><svg class="search-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg><span class="hide">Search</span></button>
         </form>
         <menu>
             <ul class="user-profile">
-                <li><a class="notifications" href="#">Notifications</a></li>
-                <li><a class="user-name" href="#">Tommy Tester</a></li>
+                <li><a class="notifications" href="#" title="Notifications"><svg class="notifications-icon" aria-hidden="true" role="button" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"><path d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" /></svg><span class="hide">Notifications</span></a></li>
+                <li><a class="user-name" title="View your profile" href="#">Tommy Tester</a></li>
             </ul>
         </menu>
         </div>
@@ -54,61 +54,52 @@
             <div class="project-wrap">
                 <h2>Your Projects</h2>
                 <div class="cards">
-            <div class="card">
-                <h3>Project Name</h3>
-                <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.</p>
-                <ul class="project-actions">
-                    <li><a class="star" href="#">Star</a></li>
-                    <li><a class="add" href="#">Add</a></li>
-                    <li><a class="copy" href="#">Copy</a></li>
-                </ul>
-            </div>
-            <div class="card">
-                <h3>Project Name</h3>
-                <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.</p>
-                <ul class="project-actions">
-                    <li><a class="star" href="#">Star</a></li>
-                    <li><a class="add" href="#">Add</a></li>
-                    <li><a class="copy" href="#">Copy</a></li>
-                </ul>
-            </div>
-            <div class="card">
-                <h3>Project Name</h3>
-                <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.</p>
-                <ul class="project-actions">
-                    <li><a class="star" href="#">Star</a></li>
-                    <li><a class="add" href="#">Add</a></li>
-                    <li><a class="copy" href="#">Copy</a></li>
-                </ul>
-            </div>
-            <div class="card">
-                <h3>Project Name</h3>
-                <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.</p>
-                <ul class="project-actions">
-                    <li><a class="star" href="#">Star</a></li>
-                    <li><a class="add" href="#">Add</a></li>
-                    <li><a class="copy" href="#">Copy</a></li>
-                </ul>
-            </div>
-            <div class="card">
-                <h3>Project Name</h3>
-                <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.</p>
-                <ul class="project-actions">
-                    <li><a class="star" href="#">Star</a></li>
-                    <li><a class="add" href="#">Add</a></li>
-                    <li><a class="copy" href="#">Copy</a></li>
-                </ul>
-            </div>
-            <div class="card">
-                <h3>Project Name</h3>
-                <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.</p>
-                <ul class="project-actions">
-                    <li><a class="star" href="#">Star</a></li>
-                    <li><a class="add" href="#">Add</a></li>
-                    <li><a class="copy" href="#">Copy</a></li>
-                </ul>
-            </div>
-            </div>
+                    <div class="card">
+                        <h3>Project Name</h3>
+                        <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.</p>
+                        <ul class="project-actions">
+                            <li><a class="star" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>Star</a></li>
+                            <li><a class="edit" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5,3C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19H5V5H12V3H5M17.78,4C17.61,4 17.43,4.07 17.3,4.2L16.08,5.41L18.58,7.91L19.8,6.7C20.06,6.44 20.06,6 19.8,5.75L18.25,4.2C18.12,4.07 17.95,4 17.78,4M15.37,6.12L8,13.5V16H10.5L17.87,8.62L15.37,6.12Z" /></svg>Edit</a></li>
+                            <li><a class="copy" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z" /></svg>Copy</a></li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        <h3>Project Name</h3>
+                        <p>Mauris ut nunc dolor. Suspendisse potenti.</p>
+                        <ul class="project-actions">
+                            <li><a class="star" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>Star</a></li>
+                            <li><a class="edit" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5,3C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19H5V5H12V3H5M17.78,4C17.61,4 17.43,4.07 17.3,4.2L16.08,5.41L18.58,7.91L19.8,6.7C20.06,6.44 20.06,6 19.8,5.75L18.25,4.2C18.12,4.07 17.95,4 17.78,4M15.37,6.12L8,13.5V16H10.5L17.87,8.62L15.37,6.12Z" /></svg>Edit</a></li>
+                            <li><a class="copy" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z" /></svg>Copy</a></li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        <h3>Project Name</h3>
+                        <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.Maecenas vel lectus eleifend, ligula, molestie massa.</p>
+                        <ul class="project-actions">
+                            <li><a class="star" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>Star</a></li>
+                            <li><a class="edit" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5,3C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19H5V5H12V3H5M17.78,4C17.61,4 17.43,4.07 17.3,4.2L16.08,5.41L18.58,7.91L19.8,6.7C20.06,6.44 20.06,6 19.8,5.75L18.25,4.2C18.12,4.07 17.95,4 17.78,4M15.37,6.12L8,13.5V16H10.5L17.87,8.62L15.37,6.12Z" /></svg>Edit</a></li>
+                            <li><a class="copy" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z" /></svg>Copy</a></li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        <h3>Project Name</h3>
+                        <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.</p>
+                        <ul class="project-actions">
+                            <li><a class="star" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>Star</a></li>
+                            <li><a class="edit" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5,3C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19H5V5H12V3H5M17.78,4C17.61,4 17.43,4.07 17.3,4.2L16.08,5.41L18.58,7.91L19.8,6.7C20.06,6.44 20.06,6 19.8,5.75L18.25,4.2C18.12,4.07 17.95,4 17.78,4M15.37,6.12L8,13.5V16H10.5L17.87,8.62L15.37,6.12Z" /></svg>Edit</a></li>
+                            <li><a class="copy" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z" /></svg>Copy</a></li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        <h3>Project Name</h3>
+                        <p>Mauris ut nunc dolor. Suspendisse potenti. Maecenas vel lectus eleifend, lacinia ligula eget, molestie massa.</p>
+                        <ul class="project-actions">
+                            <li><a class="star" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>Star</a></li>
+                            <li><a class="edit" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5,3C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19H5V5H12V3H5M17.78,4C17.61,4 17.43,4.07 17.3,4.2L16.08,5.41L18.58,7.91L19.8,6.7C20.06,6.44 20.06,6 19.8,5.75L18.25,4.2C18.12,4.07 17.95,4 17.78,4M15.37,6.12L8,13.5V16H10.5L17.87,8.62L15.37,6.12Z" /></svg>Edit</a></li>
+                            <li><a class="copy" href="#"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17H4A2,2 0 0,1 2,15V3A2,2 0 0,1 4,1H16V3H4V15H11V13L15,16L11,19V17M19,21V7H8V13H6V7A2,2 0 0,1 8,5H19A2,2 0 0,1 21,7V21A2,2 0 0,1 19,23H8A2,2 0 0,1 6,21V19H8V21H19Z" /></svg>Copy</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="feed-wrap">
             <section class="announcements">
